--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-```json
 {
 "name": "catalogo-produtos-react",
 "version": "1.0.0",
 "private": true,
+"type": "module",
 "scripts": {
 "dev": "vite",
 "build": "vite build",
@@ -13,7 +13,7 @@
 "react-dom": "^18.2.0"
 },
 "devDependencies": {
-"vite": "^5.0.0"
+"vite": "^5.0.0",
+"@vitejs/plugin-react": "^4.2.0"
 }
 }
-```
